Fix th's vertical-align to make them look better on the table.

--- a/Hallazgos/hallazgos.css
+++ b/Hallazgos/hallazgos.css
@@ -15,6 +15,10 @@ label {
 }
 /* TABLE */
 
+th {
+    vertical-align: top !important;
+}
+
 ul {
     list-style-type: none;
 }
